# simple-kalman

./: .gitignore  Cargo.toml  README.md  build.zig  build_all.sh  plot_output.py  run_c.sh  run_py.sh  run_rust.sh  run_zig.sh
src/: main.c  main.py  main.rs  main.zig
