[package]
name = "simple-kalman"
version = "0.1.0"
authors = ["Daniel Hensley <hensley.daniel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.24"
anyhow = "1.0.38"
rand = "0.8.3"
rand_distr = "0.4.0"
